@@ -26,6 +26,8 @@
 /ovs-pki.8
 /ovs-test
 /ovs-test.8
+/ovs-tcpdump
+/ovs-tcpdump.8
 /ovs-tcpundump
 /ovs-tcpundump.1
 /ovs-vlan-bug-workaround
